force-app/main/default/objects/Badge_Setting__c/Badge_Setting__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - It will define the badge allocations available for a particular event. It will have different badge allocations.</description>
    <label>Badge Setting</label>
    <nameField>
        <label>Badge Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Badge Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>