force-app/main/default/objects/Badge_Setting__c/fields/Agent_Badge_Count__c.field-meta.xml
<CustomField>
    <fullName>Agent_Badge_Count__c</fullName>
    <description>the number of badges assigned to Agent type user</description>
    <label>Agent Badge Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>