force-app/main/default/objects/Badge_Setting__c/fields/Co_Exhibitor_Badge_Count__c.field-meta.xml
<CustomField>
    <fullName>Co_Exhibitor_Badge_Count__c</fullName>
    <label>Co-Exhibitor Badge Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>