force-app/main/default/objects/Badge_Setting__c/fields/Reseller_Badge_Count__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Badge_Count__c</fullName>
    <description>the number of badges assigned to reseller type user</description>
    <label>Reseller Badge Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>