force-app/main/default/objects/Badge_Setting__c/fields/Show_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Show_Due_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It holds the visiblity of Edition.Due_Date__c on Customer Portal</description>
    <label>Show Due Date</label>
    <type>Checkbox</type>
</CustomField>